unpackaged/objects/Contact.object
<CustomObject>
  <fields>
    <fullName>AcademicTitle__c</fullName>
    <label>Academic Title</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Dr.</fullName>
        </value>
        <value>
          <fullName>Prof.</fullName>
        </value>
        <value>
          <fullName>Prof. Dr.</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Account_OneSF_Number__c</fullName>
    <formula>Account.OneSF_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account OneSF Number</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Record_Type__c</fullName>
    <formula>CASE(Account.RecordTypeId, 
"0120J00000079nB", "CIM Account",
"01220000000DiSB","Clinical Customer (D)",
"01220000000DiSf","Clinical Prospect (D)",
"01220000000Dv0w","Competitor (D)",
"01220000000AHO9","DEX D Customer",
"01220000000AHPH","DEX HC Customer",
"01220000000AHpr","Distributors Customer (D)",
"01220000000AHpm","Distributors Prospect (D)",
"01220000000DZSL","Lab Customer (D)",
"01220000000DZSV","Lab Prospect (D)",
"012260000008d0z", "ERP Account",
"012260000008d5L", "ERP Distributor",
"012260000008d30", "ERP Lab Account",
"012260000008ct0", "Geographical Account",
"012260000008d2q", "Non-ERP Account",
"012260000008d5a", "Non-ERP Distributor",
"012260000008d3A", "Non-ERP Lab Account",
"No Record Type")</formula>
    <label>Account Record Type</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Website__c</fullName>
    <formula>Account.Website</formula>
    <inlineHelpText>Can be edited from the Account record</inlineHelpText>
    <label>Account Website</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Active_KOL__c</fullName>
    <description>Bassed on roll up summary field #KOLs that counts the number of active KOL information records existing for this contact. This checkbox is only a way to better visualize that for the end users, specifically sales and service that does not have access to full KOL functionality.</description>
    <formula>IF( KOLs__c &gt;0,TRUE,FALSE)</formula>
    <inlineHelpText>Shows if this contact has been defined as a KOL by Clinical Affairs/KOL managers</inlineHelpText>
    <label>KOL</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Advisory_Board_Article_Summaries__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field if this Contact is NOT an Advisory Board Member, but should still receive the Advisory Board Article Summaries Newsletter.</description>
    <inlineHelpText>Check this field if this Contact is NOT an Advisory Board Member, but should still receive the Advisory Board Article Summaries Newsletter.</inlineHelpText>
    <label>Advisory Board Article Summaries</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Advisory_Board_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if the contact is a member of the Advisory Board. Can only be set by Global Scientific Managment.</inlineHelpText>
    <label>Advisory Board Member</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Ankylos_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ankylos User</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Approval_Date__c</fullName>
    <description>Find a dentist approval date, updated through workflow when the Find_Dentist field is ticked</description>
    <label>Approval Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Astra_Tech_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATIS User</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Atlantis_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by HQ T&amp;E.</description>
    <label>Atlantis User</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Atlantis_WebOrder_user_D__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick this checkbox if the contact is a registrerd Atlantis™ WebOrder user. Note that this field is not integrated.</description>
    <inlineHelpText>Tick this checkbox if the contact is a registrerd Atlantis™ WebOrder user. Note that this field is not integrated.</inlineHelpText>
    <label>Atlantis™ WebOrder user</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Azento_Startup_Kit_Sales_Date__c</fullName>
    <label>Azento Startup Kit Sales Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Billing_State_Province__c</fullName>
    <label>Billing State/Province</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Country__c</controllingField>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AK</fullName>
        </value>
        <value>
          <fullName>AL</fullName>
        </value>
        <value>
          <fullName>AR</fullName>
        </value>
        <value>
          <fullName>AZ</fullName>
        </value>
        <value>
          <fullName>CA</fullName>
        </value>
        <value>
          <fullName>CO</fullName>
        </value>
        <value>
          <fullName>CT</fullName>
        </value>
        <value>
          <fullName>DC</fullName>
        </value>
        <value>
          <fullName>DE</fullName>
        </value>
        <value>
          <fullName>FL</fullName>
        </value>
        <value>
          <fullName>GA</fullName>
        </value>
        <value>
          <fullName>HI</fullName>
        </value>
        <value>
          <fullName>IA</fullName>
        </value>
        <value>
          <fullName>ID</fullName>
        </value>
        <value>
          <fullName>IL</fullName>
        </value>
        <value>
          <fullName>IN</fullName>
        </value>
        <value>
          <fullName>KS</fullName>
        </value>
        <value>
          <fullName>KY</fullName>
        </value>
        <value>
          <fullName>LA</fullName>
        </value>
        <value>
          <fullName>MA</fullName>
        </value>
        <value>
          <fullName>MD</fullName>
        </value>
        <value>
          <fullName>ME</fullName>
        </value>
        <value>
          <fullName>MI</fullName>
        </value>
        <value>
          <fullName>MN</fullName>
        </value>
        <value>
          <fullName>MO</fullName>
        </value>
        <value>
          <fullName>MS</fullName>
        </value>
        <value>
          <fullName>MT</fullName>
        </value>
        <value>
          <fullName>NC</fullName>
        </value>
        <value>
          <fullName>ND</fullName>
        </value>
        <value>
          <fullName>NE</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>CFEs_All_CM__c</fullName>
    <description>SBU: Any, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of CFEs completed in the current calendar month.</inlineHelpText>
    <label>CFEs Current Month (All SBUs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_All_CY_1__c</fullName>
    <description>SBU: Any, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of CFEs completed in the previous calendar year.</inlineHelpText>
    <label>CFEs Last Year (All SBUs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_All_CY__c</fullName>
    <description>SBU: Any, All Countries. Summarized by Cloud Jobs</description>
    <inlineHelpText>Shows the number of CFEs completed in the current calendar year.</inlineHelpText>
    <label>CFEs Current Year (All SBUs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_All_LM__c</fullName>
    <description>SBU: Any, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of CFEs completed in the previous calendar month.</inlineHelpText>
    <label>CFEs Last Month (All SBUs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_All_Last_12__c</fullName>
    <description>SBU: Any, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of CFEs completed in the last 12 months.</inlineHelpText>
    <label>CFEs Last 12 Months (All SBUs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_All_Last_6__c</fullName>
    <description>SBU: Any, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of CFEs completed in the last 6 months.</inlineHelpText>
    <label>CFEs Last 6 Months (All SBUs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_All_Last_7_12__c</fullName>
    <description>SBU: Any, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of CFEs completed in the last 7-12 months.</inlineHelpText>
    <label>CFEs Last 7-12 Months (All SBUs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_All_Last_CFE_Date__c</fullName>
    <description>SBU: Any, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the last time a CFE was completed for any SBU.</inlineHelpText>
    <label>Last CFE Date (All SBUs)</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>CFEs_All_Next_6__c</fullName>
    <description>SBU: Any, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of CFEs planned in the next 6 months.</inlineHelpText>
    <label>CFEs Next 6 Months (All SBUs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_CAD_CAM_Last_12__c</fullName>
    <description>SBU: CAD/CAM, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of CAD/CAM CFEs completed in the last 12 months.</inlineHelpText>
    <label>CFEs Last 12 Months (CDCM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_CAD_CAM_Last_CFE_Date__c</fullName>
    <description>SBU: CAD/CAM, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the last time a CFE was completed for CAD/CAM.</inlineHelpText>
    <label>Last CFE Date (CDCM)</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>CFEs_Endodontics_CM__c</fullName>
    <description>SBU: ENDO, All Countries</description>
    <inlineHelpText>Shows the number of customer facing events so far this current month</inlineHelpText>
    <label>CFEs Current Month (ENDO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Endodontics_CY__c</fullName>
    <description>SBU: ENDO, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events so far this current year.</inlineHelpText>
    <label>CFEs Current Year (ENDO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Endodontics_LM__c</fullName>
    <description>SBU: ENDO, All countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events last month</inlineHelpText>
    <label>CFEs Last Month (ENDO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Endodontics_Last_12__c</fullName>
    <description>SBU: Endodontics, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of Endodontics CFEs completed in the last 12 months.</inlineHelpText>
    <label>CFEs Last 12 Months (ENDO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Endodontics_Last_6__c</fullName>
    <description>SBU: Endo, all countries</description>
    <inlineHelpText>Shows # of customer facing events last 6 months</inlineHelpText>
    <label>CFEs Last 6 Months (ENDO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Endodontics_Last_7_12__c</fullName>
    <description>SBU: ENDO, All countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events the last 7-12 months</inlineHelpText>
    <label>CFEs Last 7-12 Months (ENDO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Endodontics_Last_CFE_Date__c</fullName>
    <description>SBU: ENDO, All Countries - last CFE date populated by Cloud Job together with CFE roll-up summaries</description>
    <inlineHelpText>Shows the last time a customer facing event was completed for Endodontics</inlineHelpText>
    <label>Last CFE Date (ENDO)</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>CFEs_Endodontics_Next_6__c</fullName>
    <description>SBU: ENDO, All Countries</description>
    <inlineHelpText>Shows the number of planned Customer Facing Events the next coming 6 months</inlineHelpText>
    <label>CFEs Next 6 Months (ENDO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Imaging_Systems_Last_12__c</fullName>
    <description>SBU: Imaging Systems, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of Imaging Systems CFEs completed in the last 12 months.</inlineHelpText>
    <label>CFEs Last 12 Months (IMAG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Imaging_Systems_Last_CFE_Date__c</fullName>
    <description>SBU: Imaging Systems, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the last time a CFE was completed for Imaging Systems.</inlineHelpText>
    <label>Last CFE Date (IMAG)</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>CFEs_Implants_CM__c</fullName>
    <label>CFEs Current Month (IMPL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Implants_CY_1__c</fullName>
    <description>Updated by an Apex batch job once per year. If CFEs are added or removed for a full year between the Apex runs this will not be reflected in this field. More information in this document: 
https://emea.salesforce.com/069200000005E7g For questions around how the APEX code works, contact the CRM Team.</description>
    <inlineHelpText>Updated once per year to reflect the # of CFEs for year as stated in the label.</inlineHelpText>
    <label>CFEs Last Year (IMPL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Implants_CY_2__c</fullName>
    <description>Updated by an Apex batch job once per year. If CFEs are added or removed for a full year between the Apex runs this will not be reflected in this field. More information in this document: 
https://emea.salesforce.com/069200000005E7g For questions around how the APEX code works, contact the CRM Team.</description>
    <inlineHelpText>Updated once per year to reflect the # of CFEs for year as stated in the label.</inlineHelpText>
    <label>CFEs 2020 (IMPL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Implants_CY_3__c</fullName>
    <description>Updated by an Apex batch job once per year. If CFEs are added or removed for a full year between the Apex runs this will not be reflected in this field. More information in this document: 
https://emea.salesforce.com/069200000005E7g For questions around how the APEX code works, contact the CRM Team.</description>
    <inlineHelpText>Updated once per year to reflect the # of CFEs for year as stated in the label.</inlineHelpText>
    <label>CFEs 2019 (IMPL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Implants_CY__c</fullName>
    <description>Updated by an Apex batch job once per day. If CFEs are added or removed for during a day, it will be added to the summary once the Batch Job is run. More information in this document: 
https://emea.salesforce.com/069200000005E7g For questions around how the APEX code works, contact the CRM Team.</description>
    <inlineHelpText>Updated once per day to reflect the # of CFEs for Current Year.</inlineHelpText>
    <label>CFEs Current Year (IMPL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Implants_LM__c</fullName>
    <label>CFEs Last Month (IMPL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Implants_Last_12__c</fullName>
    <description>SBU: Implants, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of Implants CFEs completed in the last 12 months.</inlineHelpText>
    <label>CFEs Last 12 Months (IMPL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Implants_Last_6__c</fullName>
    <description>Updated by an Apex batch job once per day to reflect CFEs Last 180 days. If CFEs are added or removed for during a day, it will be added to the summary once the Batch Job is run. More information in this document: 
https://emea.salesforce.com/069200000005E7g For questions around how the APEX code works, contact the CRM Team.</description>
    <inlineHelpText>Total # of Dental CFEs Last 6 Months/Last 180 days.</inlineHelpText>
    <label>CFEs Last 6 Months (IMPL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Implants_Last_7_12__c</fullName>
    <description>Updated by an Apex batch job once per day to reflect CFEs Last 181-365 days. If CFEs are added or removed for during a day, it will be added to the summary once the Batch Job is run. More information in this document: 
https://emea.salesforce.com/069200000005E7g For questions around how the APEX code works, contact the CRM Team.</description>
    <inlineHelpText>Total # of Dental CFEs Last 7-12 Months/Last 181-365 days</inlineHelpText>
    <label>CFEs Last 7-12 Months (IMPL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Implants_Last_CFE_Date__c</fullName>
    <description>The date of the last completed CFE</description>
    <inlineHelpText>The date of the last completed CFE</inlineHelpText>
    <label>Last CFE Date (IMPL)</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>CFEs_Implants_Next_6__c</fullName>
    <description>Updated by an Apex batch job once per day. If CFEs are added or removed during the day it will be added to this field when the Batch job is run. More information in this document: 
https://emea.salesforce.com/069200000005E7g For questions around how the APEX code works, contact the CRM Team.</description>
    <inlineHelpText>Total # of Planned Dental CFEs Next 6 Months/Next 0-180 Days.</inlineHelpText>
    <label>CFEs Next 6 Months (IMPL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Instruments_Last_12__c</fullName>
    <description>SBU: Instruments, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of Instruments CFEs completed in the last 12 months.</inlineHelpText>
    <label>CFEs Last 12 Months (INST)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Instruments_Last_CFE_Date__c</fullName>
    <description>SBU: Instruments, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the last time a CFE was completed for Instruments.</inlineHelpText>
    <label>Last CFE Date (INST)</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>CFEs_Orthodontics_CM__c</fullName>
    <description>SBU: Orthodontics, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events so far this current month</inlineHelpText>
    <label>CFEs Current Month (ORTHO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Orthodontics_CY__c</fullName>
    <description>SBU: Orthodontics, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events so far this current year</inlineHelpText>
    <label>CFEs Current Year (ORTHO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Orthodontics_LM__c</fullName>
    <description>SBU: Orthodontics, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events last month</inlineHelpText>
    <label>CFEs Last Month (ORTHO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Orthodontics_Last_12__c</fullName>
    <description>SBU: Orthodontics, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of Orthodontics CFEs completed in the last 12 months.</inlineHelpText>
    <label>CFEs Last 12 Months (ORTH)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Orthodontics_Last_6__c</fullName>
    <description>SBU: Orthodontics, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events the last 6 months</inlineHelpText>
    <label>CFEs Last 6 Months (ORTHO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Orthodontics_Last_7_12__c</fullName>
    <description>SBU: Orthodontics, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events the last 7-12 Months</inlineHelpText>
    <label>CFEs Last 7-12 Months (ORTHO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Orthodontics_Last_CFE_Date__c</fullName>
    <description>SBU: Orthodontics, All Countries</description>
    <inlineHelpText>Shows the date for the latest Customer Facing Event made by Orthodontics</inlineHelpText>
    <label>Last CFE Date (ORTHO)</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>CFEs_Orthodontics_Next_6__c</fullName>
    <description>SBU: Orthodontics, All Countries</description>
    <inlineHelpText>Shows the number of planned Customer Facing Events for the next 6 Months</inlineHelpText>
    <label>CFEs Next 6 Months (ORTHO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Preventive_CM__c</fullName>
    <description>SBU: Preventive, All Countries</description>
    <inlineHelpText>Shows the number of Cstomer Facing Events so far this current month</inlineHelpText>
    <label>CFEs Current Month (PREV)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Preventive_CY__c</fullName>
    <description>SBU: Preventive, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events so far this current year</inlineHelpText>
    <label>CFEs Current Year (PREV)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Preventive_LM__c</fullName>
    <description>SBU: Preventive, All Countries</description>
    <inlineHelpText>Shows the number of customer fscing events the last month</inlineHelpText>
    <label>CFEs Last Month (PREV)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Preventive_Last_12__c</fullName>
    <description>SBU: Preventive, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of Preventive CFEs completed in the last 12 months.</inlineHelpText>
    <label>CFEs Last 12 Months (PREV)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Preventive_Last_6__c</fullName>
    <description>SBU: Preventive, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events the last 6 months</inlineHelpText>
    <label>CFEs Last 6 Months (PREV)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Preventive_Last_7_12__c</fullName>
    <description>SBU: Preventive, All Countries</description>
    <inlineHelpText>Shows the number of customer facing events the last 7-12 months</inlineHelpText>
    <label>CFEs Last 7-12 Months (PREV)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Preventive_Last_CFE_Date__c</fullName>
    <description>SBU: Preventive, All Countries</description>
    <inlineHelpText>Shows the date of the latest completed Customer Facing Event for Preventive</inlineHelpText>
    <label>Last CFE Date (PREV)</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>CFEs_Preventive_Next_6__c</fullName>
    <description>SBU: Preventive, All Countries</description>
    <inlineHelpText>Shows the number of planned customer facing events for the next 6 months</inlineHelpText>
    <label>CFEs Next 6 Months (PREV)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Prosthetics_CM__c</fullName>
    <description>SBU: Prosthetics, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events so far this current month</inlineHelpText>
    <label>CFEs Current Month (PROS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Prosthetics_CY__c</fullName>
    <description>SBU: Prosthetics, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events so far for this current year</inlineHelpText>
    <label>CFEs Current Year (PROS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Prosthetics_LM__c</fullName>
    <description>SBU: Prosthetics, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events the last month</inlineHelpText>
    <label>CFEs Last Month (PROS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Prosthetics_Last_12__c</fullName>
    <description>SBU: Prosthetics, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of Prosthetics CFEs completed in the last 12 months.</inlineHelpText>
    <label>CFEs Last 12 Months (PROS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Prosthetics_Last_6__c</fullName>
    <description>SBU: Prosthetics, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events the last 6 months</inlineHelpText>
    <label>CFEs Last 6 Months (PROS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Prosthetics_Last_7_12__c</fullName>
    <description>SBU: Prosthetics, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events the last 7-12 Months</inlineHelpText>
    <label>CFEs Last 7-12 Months (PROS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Prosthetics_Last_CFE_Date__c</fullName>
    <description>SBU: Prosthetics, All Countries</description>
    <inlineHelpText>Shows the date for the latest Customer Facing Event made by Prosthetics</inlineHelpText>
    <label>Last CFE Date (PROS)</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>CFEs_Prosthetics_Next_6__c</fullName>
    <description>SBU: Prosthetics, All Countries</description>
    <inlineHelpText>Shows the number of planned Customer Facing Events the next 6 months for Prosthetics</inlineHelpText>
    <label>CFEs Next 6 months (PROS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Restorative_CM__c</fullName>
    <description>SBU: Restorative, All Countries</description>
    <inlineHelpText>Shows the number of Customer facing Events so far this current month</inlineHelpText>
    <label>CFEs Current Month (RESTO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Restorative_CY__c</fullName>
    <description>SBU: Restorative, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events so far this current year</inlineHelpText>
    <label>CFEs Current Year (RESTO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Restorative_LM__c</fullName>
    <description>SBU: Restorative, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events last month</inlineHelpText>
    <label>CFEs Last Month (RESTO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Restorative_Last_12__c</fullName>
    <description>SBU: Restorative, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of Restorative CFEs completed in the last 12 months.</inlineHelpText>
    <label>CFEs Last 12 Months (REST)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Restorative_Last_6__c</fullName>
    <description>SBU: Restorative, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events the last 6 Months</inlineHelpText>
    <label>CFEs Last 6 Months (RESTO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Restorative_Last_7_12__c</fullName>
    <description>SBU: Restorative, All Countries</description>
    <inlineHelpText>Shows the number of Customer Facing Events the last 7-12 Months</inlineHelpText>
    <label>CFEs Last 7-12 Months (RESTO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Restorative_Last_CFE_Date__c</fullName>
    <description>SBU: Restorative, All Countries</description>
    <inlineHelpText>Shows the date for the last Customer Facing Event made by Restorative</inlineHelpText>
    <label>Last CFE Date (RESTO)</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>CFEs_Restorative_Next_6__c</fullName>
    <description>SBU: Restorative, All Countries</description>
    <inlineHelpText>Shows the number of planned Customer Facing Events the next 6 Months for Restorative</inlineHelpText>
    <label>CFEs Next 6 Months (RESTO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Treatment_Centers_Last_12__c</fullName>
    <description>SBU: Treatment Centers, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the number of Treatment Centers CFEs completed in the last 12 months.</inlineHelpText>
    <label>CFEs Last 12 Months (TRCE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_Treatment_Centers_Last_CFE_Date__c</fullName>
    <description>SBU: Treatment Centers, All Countries. Summarized by Cloud Jobs.</description>
    <inlineHelpText>Shows the last time a CFE was completed for Treatment Centers.</inlineHelpText>
    <label>Last CFE Date (TRCE)</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Capitalized_Middle_Name__c</fullName>
    <description>Used for BeNeLux to be able to capitalize email/mail sendouts.</description>
    <label>Capitalized Middle Name</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Ceram_x_Spectra_ST_Seeding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For users to target Spectrum to Ceram.x Spectra ST Seeding - requested and used in UK - temporary solution
Case: 00173908</description>
    <label>Ceram.x Spectra ST Seeding (UK)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Clinical_Studies_Involvement_Area__c</fullName>
    <label>Clinical Studies Involvement Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>IIS</fullName>
        </value>
        <value>
          <fullName>CIS</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Comminucation_By_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To fill in after EAO 2015</description>
    <inlineHelpText>To fill in after EAO 2015</inlineHelpText>
    <label>Comminication By Phone</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Communication_via_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To fill in after EAO 2015</description>
    <inlineHelpText>To fill in after EAO 2015</inlineHelpText>
    <label>Communication via Email</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Communication_via_Sales_Reps_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To fill in after EAO 2015</description>
    <inlineHelpText>To fill in after EAO 2015</inlineHelpText>
    <label>Communication via Sales Reps Visit</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CompleteContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for the integration towards Profisee - set to false in case the Contact does not have a complete name or in case the Contact does not have an Email/Address/Phone number.</description>
    <label>Complete Contact</label>
    <type>Checkbox</type>
  </fields>
</CustomObject>